# config

./: .vimrc  CMakeLists.txt  command.txt
